# MetaDataScraper

./: README.md  SECURITY.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: main.yml  publish_prebuilt.yml  python-publish.yml  static.yml
FacebookScraper/: FacebookScraper.py  __init__.py
FacebookScraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MetaDataScraper/: FacebookScraper.py  __init__.py
MetaDataScraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: README.md  conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst
tests/: test_logged_in_scraper.py  test_loginless_scraper.py
