[build-system]
requires      = ["wheel", "setuptools>=61.0.0", "pytest==8.3.2", "pytest-mock==3.14.0", "selenium==4.23.0", "webdriver-manager==4.0.2"]
build-backend = "setuptools.build_meta"

[project]
name = "MetaDataScraper"
version = "1.0.4"
authors = [
  { name="Ishan Surana", email="ishansurana1234@gmail.com" },
]
maintainers = [
  { name="Ishan Surana", email="ishansurana1234@gmail.com" },
]
description = "A module designed to automate the extraction of follower counts and post details from a public Facebook page."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    'selenium==4.23.0',
    'webdriver-manager==4.0.2'
]
requires-python = ">=3.10"
keywords = ["facebook", "scraper", "meta", "selenium", "webdriver-manager", "automation", "web-scraping", "web-crawling", "web-automation", "facebook-scraper", "facebook-web-scraper", "meta-scraper"]

[project.urls]
Homepage = "https://metadatascraper.readthedocs.io/en/latest/"
Documentation = "https://metadatascraper.readthedocs.io/en/latest/"
Repository = "https://github.com/ishan-surana/MetaDataScraper"
Changelog = "https://github.com/ishan-surana/MetaDataScraper/releases"
Issues = "https://github.com/ishan-surana/MetaDataScraper/issues"